# refactoring

./: .gitignore  README.md  draft.md  effective-refactoring-1.md  effective-refactoring-2.md  effective-refactoring-3.md  refactoring-2nd.md  refactoring.md
code/c/sdk-result/: CMakeLists.txt  build.sh
code/c/sdk-result/src/: CMakeLists.txt  fwd_ctrl.c
code/c/sdk-result/test/: CMakeLists.txt  test_chip.cpp
code/c/sdk/include/sdk/: fwd_ctrl.h
code/cpp/example/: Customer.h  Movie.h  Rental.h
code/cpp/original/: Customer.cpp  Main.cpp  Movie.cpp  Rental.cpp
code/cpp/result/: ChildrensPrice.cpp  ChildrensPrice.h  Customer.cpp  Customer.h  Movie.cpp  Movie.h  NewReleasePrice.cpp  NewReleasePrice.h  Price.h  RegularPrice.cpp  RegularPrice.h  Rental.cpp  Rental.h
code/java/example/: pom.xml
code/java/example/src/main/java/magicbowen/: Customer.java
code/java/example/src/test/java/magicbowen/: CustomerTest.java
code/java/original/: pom.xml
code/java/original/src/main/java/magicbowen/: Movie.java  Rental.java
code/java/result/: pom.xml
code/java/result/src/main/java/magicbowen/: Customer.java  Movie.java  MovieType.java  Rental.java  StatementFormatter.java  (+1 more)
code/js/original/: package-lock.json  package.json
code/js/original/src/: index.js
code/js/original/test/: invoices.json  testStatement.js
code/js/result/: package-lock.json  package.json
code/js/result/src/: HtmlFormatter.js  TextFormatter.js  calculator.js  createStatementData.js  formatter.js  index.js
code/js/result/test/: plays.json  testHtmlStatement..js  testStatement.js
(+3 files in other folders)
